--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -24,7 +24,7 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>  
-<p>Your Name Here - WDD130</p>                
+<p>Kelsey Berta - WDD130</p>                
                   
                   
 </body>
