--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>
-    <h1>Welcome to WDD130 Web Projects</h1>
+    <h1>Welcome to WDD-130 Web Projects</h1>
     <nav>
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
@@ -24,7 +24,7 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>  
-<p>Your Name Here - WDD130</p>                
+<p>Kelsey Berta - WDD130</p>                
                   
                   
 </body>
