--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dry Oar Rafting</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -12,10 +13,10 @@
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="index.html" target="_blank">Home</a>
+            <a href="#" target="_blank">Page 2</a>
+            <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
+            <a href="contactus.html" target="_blank">Contact Us</a>
         </nav>
     </header>
 <div id="hero">
