WWR Site Plan Wireframe

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -101,8 +101,7 @@
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
+      <div class="sm-page2">Rates/Dates
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -119,10 +118,11 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Rates/Dates</h3>
+    <img src="images/1-Home.png" alt="Rates/Dates wireframe">
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
 
 </html>
+
