Recipe Site Plan W8

--- a/recipes/site-plan.html
+++ b/recipes/site-plan.html
@@ -87,9 +87,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="Home">Home</a>
+        <a href="Sweet">Sweet</a>
+        <a href="Savory">Savory</a>
       </nav>
       <hr>
       <h2>
@@ -99,11 +99,11 @@
         <div class="sm-home">
           Home
         </div>
-        <div class="sm-page2">
-          [Page2] <!-- change this -->
+        <div class="sm-Sweet">
+          Sweet <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Savory  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,35 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Tips; If the recipe calls for room temperature make sure it is actually room tempertaure. Make sure you have all the ingredients before you start. Keep the oven door shut even to check, if you want to check us the oven light.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/anitpasto.jpg" width="200" height="400" alt="image of antipasta">
+        <img src="images/family.jpg" width="200" height="400" alt="image of my family">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Sweet</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Satisfying your cravings with an assortment of desserts. Feel free to add whip cream or ice cream to these as well.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/pumpkin-pie.jpg" width="200" height="400" alt="image of pumpkin pie" >
+        <img src="images/cheesecake.jpg" width="200" height="400" alt="image of cheesecake with strawberries">
+        <img src="images/cookie-cake.jpg" width="200" height="400" alt="image of cookie cake">
+        <img src="images/pecan-ring.jpg" width="200" height="400" alt="image of pecan ring filled with french cream">
+        <img src="images/lemon-blueberry.jpg" width="200" height="400" alt="image of lemon blueberry crumb cake">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Savory</h3>
       <p>
-        [Written copy for the Page 3 here]
+        To balance your sweet tooth have food alittle better for you than the dessert. These can be served with lots of different things so have fun with it.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/chicken-francese.jpg" width="200" height="400" alt="image of chicken francese">
+        <img src="images/kale-pasta.jpg" width="200" height="400" alt="image of kale pasta">
+        <img src="images/spaghetti-aioli.jpg" width="200" height="400" alt="image of spaghetti aioli">
+        <img src="images/turkey-wrap.jpg" width="200" height="400" alt="image of turkey wrap">
+        <img src="images/mac-n-cheese.jpg" width="200" height="400" alt="image of mac n cheese">
 
       </ul>
       <hr>
@@ -159,21 +165,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The top images is the logo and it is a link to the homepage.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home-page-wire-frame.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Sweet</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The top images is the logo and it is a link to the homepage. The recipes and pictures will alternate down the page, the website wouldn't let my wireframe extend down.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/wire-frame-pages.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Savory</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        The top images is the logo and it is a link to the homepage. The recipes and pictures will alternate down the page, the website wouldn't let my wireframe extend down.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/wire-frame-pages.png" alt="page 3 wireframe">
     </main>
   </body>
 
