--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="recipes/site-plan.html">Personal Siteplan</a>
     </nav>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
@@ -22,7 +22,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="recipes/site-plan.html">Personal Siteplan</a>
     </nav>  
 <p>Kelsey Berta - WDD130</p>                
                   
