--- a/wwr/ratesDates.html
+++ b/wwr/ratesDates.html
@@ -29,24 +29,24 @@
    
 </div>      
     <main class="rates-grid">
-        <section id= "rates-expo">
-                    <h2 class = "page-expo">Prices and Dates for our 2016 Season</h2>
-        </section>
+    
         <section id="dates-prices">
-            <p1 >GRAND CANYON THREE-NIGHT TRIP: 2016 Pricing and Dates Grand Canyon 3 night trips: $1,475 April 30 May 13, 20, 27, 30 June 3, 10, 17, 24, 28 July 1, 8, 15, 22, 29 August 5, 12, 19, 26 September 9, 17
-            </p1>
+            <h2 class = "page-expo">Prices and Dates for our 2016 Season</h2>
+
+            <p id="date-1" >GRAND CANYON THREE-NIGHT TRIP: 2016 Pricing and Dates Grand Canyon 3 night trips: $1,475 April 30 May 13, 20, 27, 30 June 3, 10, 17, 24, 28 July 1, 8, 15, 22, 29 August 5, 12, 19, 26 September 9, 17
+            </p>
             <img id="action-img" src="images/action.jpg" alt="People rafting">
 
-            <p2>GRAND CANYON SIX-NIGHT TRIP: (The dates listed will be the date that you spend the night in Marble Canyon. The launch date is the following day.) 2016 Pricing and Dates Grand Canyon 6 night trips: $2,550 April 25 May 8, 15, 22, 25, 29 June 5, 12, 19, 23, 26 July 3, 10, 17, 24, 31 August 7, 14, 21 September 4, 12
-            </p2>
+            <p id="date-2">GRAND CANYON SIX-NIGHT TRIP: (The dates listed will be the date that you spend the night in Marble Canyon. The launch date is the following day.) 2016 Pricing and Dates Grand Canyon 6 night trips: $2,550 April 25 May 8, 15, 22, 25, 29 June 5, 12, 19, 23, 26 July 3, 10, 17, 24, 31 August 7, 14, 21 September 4, 12
+            </p>
             <img id="raft-img" src="images/raft.jpg" alt="Raft cloudy day">
 
-            <p3 >Salmon River 5 night trip (The dates listed will be the date that you spend the night in Salmon. The launch date is the following day.) 2016 Pricing and Dates Regular Rate: $1,540 Trip Dates June 3, 10, 17, 24 July 2
-            </p3>
+            <p id="date-3">Salmon River 5 night trip (The dates listed will be the date that you spend the night in Salmon. The launch date is the following day.) 2016 Pricing and Dates Regular Rate: $1,540 Trip Dates June 3, 10, 17, 24 July 2
+            </p>
             <img id="people-rapids-img" src="images/people-rapids.jpg" alt="People in the rapids">
 
-            <p4 >Desolation 6 night Trip 2016 Pricing and Dates Regular Rate: $1,790 Trip Dates July 10, 18, 26 Aug 3, 11, 19, 27 Sept 4
-            </p4>
+            <p id="date-4">Desolation 6 night Trip 2016 Pricing and Dates Regular Rate: $1,790 Trip Dates July 10, 18, 26 Aug 3, 11, 19, 27 Sept 4
+            </p>
             <img class="logo-rates" src="images/logo.png" alt="Dry Oar Logo">
             
         </section>
