--- a/recipes/sweet.html
+++ b/recipes/sweet.html
@@ -11,7 +11,214 @@
     <header id="navigation">
        <nav>
             <a id="sweet" href="sweet.html" target="_blank">Sweet</a>
+            <a id="logo_link" href="index.html"><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ms. Foody</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+    <header id="navigation">
+       <nav>
+            <a id="sweet" href="sweet.html" target="_blank">Sweet</a>
             <a id="logo_link" href="index.html">
+            <img class="logo" src="images/ms-foody-logo.png" alt="Ms Foody Logo">
+            </a>
+           
+            <a id="savory" href="savory.html" target="_blank">Savory</a>
+        </nav>
+    </header>
+    <div id="explanation-sub">
+        <section id="explanation-msg-sub">
+            <p class="sub-msg">Satisfying your cravings with an assortment of desserts. Feel free to add whip cream or ice cream to these as well.           
+            </p>
+        </section>
+    </div>      
+    <main class="recipe-grid">
+            <img class="cheesecake-img" src="images/cheesecake.jpg" alt="Cheesecake with Fresh Strawberries" width="200">
+            <h2 class="cheesecake-name">New York Style Cheesecake</h2>
+            <ul class="cheesecake-ingredients">
+                Ingredients:
+                For crust:
+                <li>1 1/2 cups graham cracker cumbs</li>
+                <li>5 TB unsalted butter, melted</li>
+                <li>2 TB sugar</li>
+                <li>1/8 tsp salt</li>
+                For filling:
+                <li>32 oz cream cheese, room temp</li>
+                <li>2 cups sugar</li>
+                <li>3 TB all-purpose flour</li>
+                <li>4 tsp vanilla extract</li>
+                <li>1 tsp packed lemon zest</li>
+                <li>2 tsp fresh lemon juice</li>
+                <li>1/4 tsp salt</li>
+                <li>6 large eggs</li>
+                <li>1/2 cup sour cream</li>
+            </ul>
+            <ul class="cheesecake-directions">Directions:
+                <ol>Preheat oven - 375 degrees with oven rack in lower middle position. Spray pan with nonstick spray.</ol>
+                <ol>Make crust in a medium bowl combine graham crackers, butter sugar and salt. Stir until combined. Press crumbs into even layer on the bottom. Bake for 10 minutes.</ol>
+                <ol>Reduce temp to 325 and set a kettle or pot of water to boil.</ol>
+                <ol>Make the filling with mixer with paddle or beater attachment. Beat cream cheese, sugar and flour together about one minute until smooth. Add vanilla, lemon zest, lemon juice and salt; beat on low speed until just combined. Add the eggs one at a time until coorporated. Mix in sour cream, make batter uniform, but do not over mix.</ol>
+                <ol>Pour batter in crust. Place pan on roasting pan or cookie sheet and fill cookie sheet with boiling water. Bake 1 hour 30 minutes to 1 hour 45 minutes, until cake is set.</ol>
+                <ol>Remove from oven and place on cooling rack.</ol>
+            </ul>
+            <img class="cookie-cake-img" src="images/cookie-cake.jpg" alt="Cookie Cake" width="200">
+            <h2 class="cookie-cake-name">Cookie Cake</h2>
+            <ul class="cookie-cake-ingredients">
+                Ingredients:
+                <li>½ cup unsalted butter, melted</li>
+                <li>⅓ cup granulated sugar</li>
+                <li>½ cup packed brown sugar</li>
+                <li>1 large egg</li>
+                <li>1 tsp vanilla extract</li>
+                <li>½ tsp salt</li>
+                <li>½ tsp baking soda</li>
+                <li>1 ½ cups all-purpose flour</li>
+                <li>1 ½ cups chocolate chips</li>
+                <li>Your favorite frosting</li>
+            </ul>
+            <ul class="cookie-cake-directions">Directions:
+                <ol>Preheat oven to 350°F. Line a 9-inch round cake pan with foil and spray with nonstick cooking spray.</ol>
+                <ol>Place melted butter in a large bowl (or bowl of a stand mixer fitted with the paddle attachment). Add granulated sugar and brown sugar and mix on low speed until the mixture is smooth. Mix in egg and vanilla extract and mix on medium speed until combined.</ol>
+                <ol>Mix in salt and baking soda, then slowly mix in flour and mix just until the batter is smooth and comes together. Be sure to scrape the sides of the bowl during mixing. Slowly mix in chocolate chips.
+                </ol>
+                <ol>Press batter into prepared pan. Bake for about 21-25 minutes or until the cookie is just slightly golden brown on top and a toothpick comes out clean from the center. Let cool before frosting.
+                </ol>
+            </ul>
+        <section class="lemon-blueberry-box">
+            <img class="lemon-blueberry-img" src="images/lemon-blueberry.jpg" alt="Lemon Blueberry Crumb Cake" width="200">
+            <h2>Lemon Blueberry Crumb Cake</h2>
+            <ul>
+                Ingredients:
+                For Blueberry Compote:
+                <li>250 g fresh or frozen blueberries</li>
+                <li>2 tbsp sugar</li>
+                <li>2 tsp lemon juice</li>
+                <li>½ tsp ground cinnamon</li>
+                For crumble topping:
+                <li>60 g plain or all-purpose flour</li>
+                <li>45 g sugar</li>
+                <li>½ tsp ground cinnamon</li>
+                <li>45 g unsalted butter, cold, cut into cubes</li>
+                For Blueberry Cake:
+                <li>175 g unsalted butter, softened at room temperature</li>
+                <li>125 g light brown sugar</li>
+                <li>50 g caster sugar</li>
+                <li>Grated zest of 1 lemon</li>
+                <li>3 large eggs</li>
+                <li>175 g plain or all-purpose flour</li>
+                <li>2 tsp baking powder</li>
+                <li>¼ tsp salt</li>
+                <li>2 tbsp milk</li>
+                <li>1 tbsp lemon juice</li>
+                For Lemon Glaze:
+                <li>120 g powdered sugar</li>
+                <li>1½ tbsp lemon juice</li>
+                <li>5 g unsalted butter, melted</li>
+                <li>Pinch of salt</li>
+            </ul>
+            <ul>Directions:
+                <ol>In a small saucepan set over medium heat, add blueberries, lemon juice, lemon zest, sugar and cinnamon. Give it a couple of stirs to mix well. Cook the mixture until the blueberries release their juices and soften a bit, stirring only occasionally. Tip the cooked blueberries into a strainer set on top of a bowl to catch the juices. Set aside to cool to room temperature.
+                </ol>
+                <ol>In a mixing bowl, stir flour, sugar and cinnamon together. Rub in cold butter cubes with your fingers until the mixture resembles coarse breadcrumbs, roughly the size of peas. Place in the chiller until needed.
+                </ol>
+                <ol>Preheat oven to 375 degrees. Grease the sides and base of a 8-inch loose-bottomed cake pan. Line the base with baking paper.
+                </ol>
+                <ol>In a stand mixer fitted with a paddle beater (or using handheld electric beaters), beat butter and sugars on medium speed until the mixture turns pale and feels light and fluffy, about 5 – 7 minutes. 
+                </ol>
+                <ol>Add lemon zest and beat for a few seconds to mix well. Then add lightly beaten eggs, a bit at a time. The batter will curdle at first. Continue to beat on medium speed until the batter becomes smooth again, before adding the next addition.
+                </ol>
+                <ol>Sift in the plain flour, baking powder, ground cinnamon and salt. Fold a few rounds by hand first, before you start the mixer. Turn the mixer on low speed, and beat until just combined and the batter is smooth, about 5 – 10 seconds. 
+                </ol>
+                <ol>Add the milk and lemon juice, and beat until just incorporated. The final batter should be smooth and thick.
+                </ol>
+                <ol>Fill the pan: spread a third of the batter into the prepared pan. Using a spatula, spread an even layer to cover the base. Gently drop spoonfuls of blueberry compote (drained of juices) over the batter. Spoon another one-third of the batter over the fruit, followed by the compote. Finish with the remaining batter and blueberry compote. 
+                </ol>
+                <ol>Take the crumble topping out of the chiller and spread evenly over the batter, all the way to the edges of the cake pan. Set the pan on the middle rack of the oven, and bake for 45 – 50 mins or until a bamboo or metal skewer inserted into the center of the cake comes out clean. If the skewer emerges with some sticky batter, bake for a few more minutes and check again. When baking is finished, remove the cake from the oven and leave it in the pan for 10 minutes.
+                </ol>
+                <ol>Then remove from the pan, and set the cake onto a wire rack to cool a while. Meanwhile, make the lemon glaze.
+                </ol>
+                <ol>When the cake is cooled enough, drizzle the lemon glaze with a metal spoon over the top and sides of the cooled blueberry cake as desired. This cake is best served warm.
+                </ol>
+                <ol>In a small bowl, combine icing sugar, lemon juice, melted butter and salt. Stir vigorously until the glaze is smooth.  Note: If the glaze starts to firm up too soon, microwave on low power in short bursts until its at a pourable consistency.
+                </ol>
+            </ul>
+        </section>
+        <section class="pecan-ring-box">
+            <img class="pecan-ring-img" src="images/pecan-ring.jpg" alt="Pecan Ring Filled with French Cream" width="200">
+            <h2>Pecan Ring Filled With French Cream</h2>
+            <ul>
+                Ingredients:
+                Dough:
+                <li>3/4 cup warm milk (105-115 degrees)</li>
+                <li>1/4 cup sugar</li>
+                <li>1 (1/4 ounce) package active dry yeast</li>
+                <li>3 cups all-purpose flour</li>
+                <li>1/2 teaspoon salt</li>
+                <li>1/8 teaspoon ground cardamom</li>
+                <li>1 cup butter, cut into 3/4 inch pieces</li>
+                <li>2 eggs</li>
+                Icing:
+                <li>1/2 cup powdered sugar</li>
+                <li>1 tablespoon milk</li>
+                <li> 1 cup whole pecans</li>
+            </ul>
+            <ul>Directions:
+                <ol>In measuring cup combine milk, sugar and yeast. Let stand until frothy, 5 minutes. In large bowl combine flour, salt, and cardamom. With pastry blender cut in better until well distributed with some 1/2" pieces remaining.</ol>
+                <ol>Combine eggs with yeast mixture; stir into flour mixture until sticky dough forms. Cover; regrigerate until thoroughly chilled; at least 6 hrs or overnight. Turn dough out onto lightly floured surface. Roll out into 20x9" rectangle, re-flouring dough as needed. With long side of dough facing you, fold short sides over in thirds. Wrap; chill 30 minutes.</ol>
+                <ol>Unwrap dough; on lightly floured surface, with long side facing you, roll out dough into 20x9" rectangle.
+                    Repeat folding.
+                    Wrap; chill 30 minutes.
+                    Repeat rolling and folding two more times.
+                    Wrap and chill until ready to use, at least 45 minutes.</ol>
+                    <ol>Preheat oven to 375 degrees. Roll out dough into 24x9" rectangle. Fold 1 long side of dough over; brush with water. Fold remaining dough over, gently pressing to attach. Line baking sheet with parchment paper. Shape roll, seam side down, into ring on baking sheet; press ends together to seal</ol>
+                    <ol>Beat remaining yolk with 1 tbsp water; brush over ring.
+                        Bake 40 minutes until golden brown (cover edges with foil if browning too quickly).
+                        Remove from oven;</ol>
+                    <ol>Combine powdered sugar with milk and drizzle over ring. Add pecans</ol>
+                    <ol>Cut ring in half and fill with frecnh cream or whipped cream, add cherries and powdered sugar if desired.</ol>
+                </ul>
+        </section>
+        <section class="pumpkin-box">
+            <img class="pumpkin-img" src="images/pumpkin-pie.jpg" alt="Pumpkin Pie" width="200">
+            <h2>Pumpkin Pie</h2>
+            <ul>
+                Ingredients:
+                <li>1 frozen unbaked deep dish pie crust, 9-inch</li>
+                <li>1 can (15 ounces) pumpkin</li>
+                <li>1 can (14 ounces) sweetened condensed milk</li>
+                <li>2 eggs</li>
+                <li>1 tablespoon Pumpkin Pie Spice</li>
+                <li>1 teaspoon Pure Vanilla Extract</li>
+            </ul>
+            <ul>Directions:
+                <ol>start by preheating the oven to 425°F. Place frozen pie crust on large foil-lined baking sheet.</ol>
+                <ol>Mix pumpkin, milk, eggs, pumpkin pie spice and vanilla in large bowl until smooth. Pour into crust.</ol>
+                <ol>Bake 15 minutes. Reduce oven temperature to 350°F. Bake 40 minutes longer or until knife inserted 1 inch from the crust comes out clean. Cool completely on wire rack. Serve with Vanilla Whipped Cream, if desired.</ol>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>Ms Foody &copy; 2022 - Kelsey Berta</p>
+        <p><a href="site-plan.html">Site Plan</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
+</body>
+</html>
             <img class="logo" src="images/ms-foody-logo.png" alt="Ms Foody Logo">
             </a>
            
