--- a/recipes/index.html
+++ b/recipes/index.html
@@ -110,7 +110,7 @@
             <ul>
                 <li>If the recipe calls for room temperature butter or eggs, make sure they are.</li>
                 <li>Make sure you have all the ingredients before you start.</li>
-                <li>Oven the oven door as little as possible, use the light to check for doneness.</li>
+                <li>Open the oven door as little as possible, use the light to check for doneness.</li>
             </ul>
         </section>
         <section class="family-card">
@@ -120,6 +120,10 @@
             <h2>Products I Use</h2>
             <ul>
                 <li>Kitchen Aid Stand Mixer</li>
+                <li>Springfoam Pans</li>
+                <li>Variety of sizes of mixing bowls</li>
+                <li>Measuring cups, liquid and dry</li>
+                <li>Frying pans and deep pots</li>
             </ul>
         </section>
     </main>
