--- a/recipes/savory.html
+++ b/recipes/savory.html
@@ -25,10 +25,9 @@
         </section>
     </div>      
     <main class="recipe-grid">
-        <section class="francese-box">
             <img class="francese-img" src="images/chicken-francese.jpg" alt="Chicken francese" width="200">
-            <h2>Chicken Francese</h2>
-            <ul>
+            <h2 class="chicken-name">Chicken Francese</h2>
+            <ul class="chicken-ingredients">
                 Ingredients:
                 For crust:
                 <li>4 skinless, boneless, chicken breasts (about 11/2 pounds)</li>
@@ -44,16 +43,14 @@
                 <li>2 tablespoons unsalted butter</li>
                 <li>1/4 cup chopped flat-leaf parsley</li>
             </ul>
-            <ul>Directions:
-                <ol>Put the chicken breasts side by side on a cutting board and lay a piece of plastic wrap over them. Pound the chicken breasts with a flat meat mallet, until they are about 1/4-inch thick. Put some flour in a shallow platter and season with a fair amount of salt and pepper; mix with a fork to distribute evenly. In a wide bowl, beat the eggs with 3 tablespoons of water to make an egg wash. Heat the oil over medium-high flame in a large skillet.</ol>
-                <ol>Dredge both sides of the chicken cutlets in the seasoned flour, and then dip them in the egg wash to coat completely, letting the excess drip off. When the oil is nice and hot, add the cutlets and fry for 2 minutes on each side until golden, turning once. Remove the chicken cutlets to a large platter in a single layer to keep warm.</ol>
-                <ol>Toss the lemon slices into the pan and cook for 1 to 2 minutes, until fragrant. Add the wine, broth, and lemon juice, simmer for 5 minutes to reduce the sauce slightly. Roll the butter in some flour and add it to the skillet, this will thicken the sauce. Stir to incorporate and dissolve the flour. Reduce the heat to medium-low and return the chicken to the pan; place the lemon slices on top of the cutlets. Simmer gently for 2 minutes to heat the chicken through. Season with salt and pepper and garnish with chopped parsley before serving.</ol>
-              </ul>
-        </section>
-        <section class="kale-pasta-box">
+            <ol type="1" class="chicken-directions">Directions:
+                <li>Put the chicken breasts side by side on a cutting board and lay a piece of plastic wrap over them. Pound the chicken breasts with a flat meat mallet, until they are about 1/4-inch thick. Put some flour in a shallow platter and season with a fair amount of salt and pepper; mix with a fork to distribute evenly. In a wide bowl, beat the eggs with 3 tablespoons of water to make an egg wash. Heat the oil over medium-high flame in a large skillet.</li>
+                <li>Dredge both sides of the chicken cutlets in the seasoned flour, and then dip them in the egg wash to coat completely, letting the excess drip off. When the oil is nice and hot, add the cutlets and fry for 2 minutes on each side until golden, turning once. Remove the chicken cutlets to a large platter in a single layer to keep warm.</li>
+                <li>Toss the lemon slices into the pan and cook for 1 to 2 minutes, until fragrant. Add the wine, broth, and lemon juice, simmer for 5 minutes to reduce the sauce slightly. Roll the butter in some flour and add it to the skillet, this will thicken the sauce. Stir to incorporate and dissolve the flour. Reduce the heat to medium-low and return the chicken to the pan; place the lemon slices on top of the cutlets. Simmer gently for 2 minutes to heat the chicken through. Season with salt and pepper and garnish with chopped parsley before serving.</li>
+            </ol>
             <img class="kale-pasta-img" src="images/kale-pasta.jpg" alt="Kale Bowtie Pasta" width="200">
-            <h2>Kale Bowtie Pasta</h2>
-            <ul>
+            <h2 class="kale-pasta-name">Kale Bowtie Pasta</h2>
+            <ul class="kale-pasta-ingredients">
                 Ingredients:
                 <li>1 pound farfalle pasta</li>
                 <li>2 cups kale, blanched</li>
@@ -67,19 +64,17 @@
                 <li>1/4 teaspoon thyme</li>
                 <li>Salt and pepper to taste</li>
             </ul>
-            <ul>Directions:
-                <ol>Cook one pound farfalle pasta.</ol>
-                <ol>Mix in a bowl oil, vinegar, mustard, honey, thyme and garlic powder</ol>
-                <ol>Combine pasta, kale, pepper and sundired tomatoes into mixture.
-                </ol>
-                <ol>Add salt and pepper to taste.
-                </ol>
-            </ul>
-        </section>
-        <section class="mac-n-cheese-box">
+            <ol type="1" class="kale-pasta-directions">Directions:
+                <li>Cook one pound farfalle pasta.</li>
+                <li>Mix in a bowl oil, vinegar, mustard, honey, thyme and garlic powder</li>
+                <li>Combine pasta, kale, pepper and sundired tomatoes into mixture.
+                </li>
+                <li>Add salt and pepper to taste.
+                </li>
+            </ol>
             <img class="mac-n-cheese-img" src="images/mac-n-cheese.jpg" alt="Mac N Cheese" width="200">
-            <h2>Mac N Cheese</h2>
-            <ul>
+            <h2 class="mac-n-cheese-name">Mac N Cheese</h2>
+            <ul class="mac-n-cheese-ingredients">
                 Ingredients:
                 <li>8 ounces uncooked elbow macaroni</li>
                 <li>¼ cup salted butter</li>
@@ -93,17 +88,15 @@
                 <li>½ cup dry bread crumbs</li>
                 <li>1 pinch ground paprika</li>
             </ul>
-            <ul>Directions:
-                <ol>Cook pasta in boiling water.</ol>
-                <ol>While the macaroni is cooking, melt 1/4 cup butter in a medium skillet over low heat. Whisk in flour and stir until the mixture becomes paste-like and light golden brown, 3 to 5 minutes.</ol>
-                <ol>Gradually whisk 2 1/2 cups milk into the flour mixture, and bring to a simmer. Stir in shredded Cheddar and finely grated Parmesan cheeses; season with salt and pepper. Cook and stir over low heat until cheese is melted and sauce has thickened, 3 to 5 minutes, adding up to 1/2 cup more milk if needed. Pour cheese sauce over macaroni and stir until well combined.</ol>
-                <ol>Place breadcrumbs, butter and paprika in a skillet and cook together until bread crumbs turn dark. Sprinkle breadcrumbs over mac n cheese. </ol>
-                </ul>
-        </section>
-        <section class="spaghetti-box">
+            <ol  type="1" class="mac-n-cheese-directions">Directions:
+                <li>Cook pasta in boiling water.</li>
+                <li>While the macaroni is cooking, melt 1/4 cup butter in a medium skillet over low heat. Whisk in flour and stir until the mixture becomes paste-like and light golden brown, 3 to 5 minutes.</li>
+                <li>Gradually whisk 2 1/2 cups milk into the flour mixture, and bring to a simmer. Stir in shredded Cheddar and finely grated Parmesan cheeses; season with salt and pepper. Cook and stir over low heat until cheese is melted and sauce has thickened, 3 to 5 minutes, adding up to 1/2 cup more milk if needed. Pour cheese sauce over macaroni and stir until well combined.</li>
+                <li>Place breadcrumbs, butter and paprika in a skillet and cook together until bread crumbs turn dark. Sprinkle breadcrumbs over mac n cheese. </li>
+            </ol>
             <img class="spaghetti-img" src="images/spaghetti-aioli.jpg" alt="Spaghetti Aioli" width="200">
-            <h2>Spaghetti Aioli</h2>
-            <ul>
+            <h2 class="spaghetti-name">Spaghetti Aioli</h2>
+            <ul class="spaghetti-ingredients">
                 Ingredients:
                 <li>1 pound spaghetti</li>
                 <li>8 to 10 cloves garlic</li>
@@ -114,17 +107,15 @@
                 <li>1/2 cup coarsely chopped fresh parsley</li>
                 <li>1 cup grated parmesan cheese</li>
             </ul>
-            <ul>Directions:
-                <ol>Boil a large pot of water. Add salt when it has boiled and add the pasta. Once the pasta has cooked to al dente (look at the package instructions), reserve a cup of the pasta water for the sauce and drain.</ol>
-                <ol>Slice the garlic into thin slivers (as thin as you can). Mince the parsley. Add the olive oil to a large pot (the same one you cooked the pasta in, if you wish) and cook on medium heat. Add half of the garlic and saute until just fragrant. Then add in the salt, pepper, red pepper flakes, and chopped parsley. Cook for another minute. Just be careful not to overcook or over toast the garlic. This can lessen the garlic flavor and can make the garlic taste bitter.</ol>
-                <ol>Add half a cup of the reserved pasta water, the pasta and the remaining garlic. Toss and cook for another 2 minutes or until it is all heated through. Add in more pasta water if needed.</ol>
-                <ol>Add the parmesan cheese and more salt to taste. Serve immediately.</ol>
-            </ul>
-        </section>
-        <section class="turkey-box">
+            <ol type="1" class="spaghetti-directions">Directions:
+                <li>Boil a large pot of water. Add salt when it has boiled and add the pasta. Once the pasta has cooked to al dente (look at the package instructions), reserve a cup of the pasta water for the sauce and drain.</li>
+                <li>Slice the garlic into thin slivers (as thin as you can). Mince the parsley. Add the olive oil to a large pot (the same one you cooked the pasta in, if you wish) and cook on medium heat. Add half of the garlic and saute until just fragrant. Then add in the salt, pepper, red pepper flakes, and chopped parsley. Cook for another minute. Just be careful not to overcook or over toast the garlic. This can lessen the garlic flavor and can make the garlic taste bitter.</li>
+                <li>Add half a cup of the reserved pasta water, the pasta and the remaining garlic. Toss and cook for another 2 minutes or until it is all heated through. Add in more pasta water if needed.</li>
+                <li>Add the parmesan cheese and more salt to taste. Serve immediately.</li>
+            </ol>
             <img class="turkey-img" src="images/turkey-wrap.jpg" alt="Turkey Wrap" width="200">
-            <h2>Turkey Wrap</h2>
-            <ul>
+            <h2 class="turkey-name">Turkey Wrap</h2>
+            <ul class="turkey-ingredients">
                 Ingredients:
                 <li>Large tortilla</li>
                 <li>1/4 pound deli turkey</li>
@@ -135,12 +126,11 @@
                 <li>Shreeded lettuce, if desired</li>
                 <li>Sliced tomatoes if desired</li>
             </ul>
-            <ul>Directions:
-                <ol>Mix mayo and mustard to make dijonaise.</ol>
-                <ol>Cook bacon and warm up tortilla. </ol>
-                <ol>Place all ingredients on tortilla and wrap.</ol>
-            </ul>
-        </section>
+            <ol type="1" class="turkey-directions">Directions:
+                <li>Mix mayo and mustard to make dijonaise.</li>
+                <li>Cook bacon and warm up tortilla. </li>
+                <li>Place all ingredients on tortilla and wrap.</li>
+            </ol>
     </main>
     <footer>
         <p>Ms Foody &copy; 2022 - Kelsey Berta</p>
